--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="">
         <div>
           <h1>Make your dogs Look their best</h1>
           <button type="button">FREE CONSULTATION</button>
