refactor hero and about sections for improved styling and structure

--- a/index.html
+++ b/index.html
@@ -26,32 +26,42 @@
       </nav>
     </header>
     <main>
-      <section class="">
-        <div>
-          <h1>Make your dogs Look their best</h1>
-          <button type="button">FREE CONSULTATION</button>
+      <section class="hero">
+        <div class="hero-content">
+          <h1 class="hero-title">
+            Make your dogs <span class="hero-title-part">Look their best</span>
+          </h1>
+          <button class="hero-button" type="button">FREE CONSULTATION</button>
         </div>
-        <div>
-          <img src="./src/img/hero-dog.jpg" alt="black and white dog" />
+        <div class="hero-photo">
+          <img
+            class="hero-img"
+            src="./src/img/hero-dog.jpg"
+            alt="black and white dog"
+          />
         </div>
       </section>
-      <section>
-        <div>
-          <img src="./src/img/goldendog.png" alt="Golden Dog" />
+      <section class="about">
+        <div class="about-photo">
+          <img
+            class="about-img"
+            src="./src/img/goldendog.png"
+            alt="Golden Dog"
+          />
         </div>
-        <div>
-          <h2>A Few Words About Us</h2>
-          <p>
+        <div class="about-content">
+          <h2 class="about-title">A Few Words About Us</h2>
+          <p class="about-text">
             SpaDog is a pet salon established in 1999 with the main goal of
             giving your pets the full furry body treatment so that they can look
             their very best every day.
           </p>
-          <p>
+          <p class="about-text">
             Our salon offers a complete line of fine grooming services to bring
             out the best of appearance and personality in your pet Our groomers
             work carefully, never rush, and do not overbook appointments.
           </p>
-          <a href="#">LEARN MORE</a>
+          <a class="about-link" href="#">LEARN MORE</a>
         </div>
       </section>
       <section>
