--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container hero-container">
           <div class="hero-content">
             <h1 class="hero-title">
               Make your dogs
@@ -54,7 +54,7 @@
         </div>
       </section>
       <section class="about">
-        <div class="container">
+        <div class="container about-container">
           <div class="about-photo">
             <img
               class="about-img"
