refactor benefits section layout and enhance styling for improved presentation

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </section>
       <section class="benefits">
-        <div class="container">
+        <div class="container benefits-container">
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-title">Qualified Employees</h3>
